objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Requested_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location from which parts are requested</description>
        <inlineHelpText>To Location</inlineHelpText>
        <label>To Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Service_Order_Line_Req_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Quantity2__c</fullName>
        <description>Number of units of this product required</description>
        <inlineHelpText>Number of units of this product required</inlineHelpText>
        <label>Requested Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_State__c</fullName>
        <description>“State/Province” part of the requested location</description>
        <inlineHelpText>“State/Province” part of the requested location</inlineHelpText>
        <label>Requested State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Street__c</fullName>
        <description>“Street” part of the requested location</description>
        <inlineHelpText>“Street” part of the requested location</inlineHelpText>
        <label>Requested Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Zip__c</fullName>
        <description>“Zip/Postal code” part of the requested location</description>
        <inlineHelpText>“Zip/Postal code” part of the requested location</inlineHelpText>
        <label>Requested Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to bind checkbox in List of Work Detail records on Visualforce page with controller.</description>
        <inlineHelpText>Field to bind checkbox in List of Work Detail records on Visualforce page with controller.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number_List__c</fullName>
        <description>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</description>
        <inlineHelpText>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</inlineHelpText>
        <label>Serial Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the part used. Reference to an existing installed product record in ServiceMax</description>
        <label>IB Serial Number</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service group if the Log Against is set to Service Group. Is a lookup to an existing service group in ServiceMax</description>
        <inlineHelpText>Name of the service group if the Log Against is set to Service Group. Is a lookup to an existing service group in ServiceMax</inlineHelpText>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Maintenance_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <description>Service order number. Is a lookup to an existing service order in ServiceMax</description>
        <inlineHelpText>Service order number. Is a lookup to an existing service order in ServiceMax</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date_and_Time__c</fullName>
        <description>Start date and time if the line type is Labor</description>
        <inlineHelpText>Start date and time if the line type is Labor</inlineHelpText>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Estimated_Price__c</fullName>
        <description>Total Estimated Price (Estimated quantity multiplied by estimated unit price)</description>
        <formula>IF(SVMXC__Billable_Quantity__c &gt; 0, SVMXC__Billable_Quantity__c * SVMXC__Estimated_Price2__c - (SVMXC__Discount__c*(SVMXC__Billable_Quantity__c * SVMXC__Estimated_Price2__c)), SVMXC__Estimated_Quantity2__c * SVMXC__Estimated_Price2__c - (SVMXC__Discount__c*(SVMXC__Estimated_Quantity2__c * SVMXC__Estimated_Price2__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Line_Price__c</fullName>
        <description>Total Line Price (Usage quantity multiplied by line&apos;s unit price)</description>
        <formula>IF(SVMXC__Billable_Quantity__c &gt; 0, SVMXC__Billable_Quantity__c * SVMXC__Actual_Price2__c - (SVMXC__Discount__c*(SVMXC__Billable_Quantity__c * SVMXC__Actual_Price2__c)), SVMXC__Actual_Quantity2__c * SVMXC__Actual_Price2__c - (SVMXC__Discount__c*(SVMXC__Actual_Quantity2__c * SVMXC__Actual_Price2__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transaction_Results__c</fullName>
        <description>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</description>
        <inlineHelpText>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</inlineHelpText>
        <label>Transaction Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Use_Price_From_Pricebook__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</description>
        <inlineHelpText>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</inlineHelpText>
        <label>Use Price From Pricebook/Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Description__c</fullName>
        <description>An assessment of work to be performed or additional details about the line type</description>
        <inlineHelpText>An assessment of work to be performed or additional details about the line type</inlineHelpText>
        <label>Work Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self lookup. Primarily used to associate Product Serviced record.</description>
        <label>Work Detail</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXPartDescription__c</fullName>
        <label>Part Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXShiptoAddress__c</fullName>
        <formula>IF(NOT(ISBLANK(PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.Ship_to__c)), 
(PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.Ship_to_Street__c + &quot; &quot; +
PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.Ship_to_City__c + &quot; &quot; +
PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.Ship_to_Zip_code__c + &quot; &quot; +
PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.Ship_to_Country__c),

PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.Ship_to_Street__c + &quot; &quot; + 
PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.SVMXC__Destination_City__c + &quot; &quot; + 
PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.SVMXC__Destination_Zip__c + &quot; &quot; + 
PartsOrderLine__r.SVMXC__RMA_Shipment_Order__r.To_Country__r.Name)</formula>
        <label>Ship to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXTechQty1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores Installed Qty + Returned Qty. The field is used in ServiceMax SFM Formulas</description>
        <label>Tech Qty 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXTechQty2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores Installed Qty + Returned Qty + Left Onsite Qty. The field is used in ServiceMax SFM Formulas</description>
        <label>Tech Qty 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXTechQty3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores Installed  + return unused items qty. The field is used in ServiceMax SFM Formulas</description>
        <label>Tech Qty 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXTech_Qty_4__c</fullName>
        <defaultValue>0</defaultValue>
        <description>new return qty fields. used in sfm formula</description>
        <label>Tech Qty 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXTechnicalReport__c</fullName>
        <label>Technical Reports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>MAINT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXTotalExpense__c</fullName>
        <label>Total Expense (Offline)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXTotalTimeHours__c</fullName>
        <label>Total Time (Offline)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchneiderCommercialReference__c</fullName>
        <formula>SVMXC__Serial_Number__r.SchneiderCommercialReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schneider Commercial Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumberForSpare__c</fullName>
        <label>Serial Number For Spare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedQuantity_del__c</fullName>
        <label>Shipped Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Qty__c</fullName>
        <formula>PartsOrderLine__r.Shipped_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipped Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Serial_Number__c</fullName>
        <label>Shipped Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartsLocal__c</fullName>
        <label>Spare Parts Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartsReturnStatus__c</fullName>
        <formula>TEXT(Parts_Order_Line_RMA__r.ShippingStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SparePartsReturnStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartslineReturnbFONumber__c</fullName>
        <formula>Parts_Order_Line_RMA__r.Name</formula>
        <label>SparePartslineReturnbFONumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SplitFromWDBORef__c</fullName>
        <label>SplitFromWDBORef</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockOriginForPartUsed__c</fullName>
        <description>Dec 2012 Service for BR- 648</description>
        <inlineHelpText>Stock Origin For Part Used</inlineHelpText>
        <label>Stock Origin For Part Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FSE Stock</fullName>
                </value>
                <value>
                    <fullName>Delivered by Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Customer Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synchronization_Log__c</fullName>
        <label>Synchronization Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Synchronization_Status__c</fullName>
        <label>Synchronization Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To be Processed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_FSR_UserId__c</fullName>
        <formula>IF(
  SVMXC__Group_Member__r.SVMXC__Salesforce_User__r.IsActive,
  SVMXC__Group_Member__r.SVMXC__Salesforce_User__c,
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_FSR_UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_OutboundEvent__c</fullName>
        <formula>&quot;WD.SYNC&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_OutboundEvent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_SentToBackOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Back Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_UnsyncedWD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_UnsyncedWD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_WOBackOfficeRecordID__c</fullName>
        <formula>SVMXC__Service_Order__r.TECH_WOBackOfficeRecordID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_WOBackOfficeRecordID__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechBankTime__c</fullName>
        <label>Tech Bank Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechEmailOfTechnician__c</fullName>
        <label>Tech Email Of Technician</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tech_FSR_Update_Authorized_for_PFSR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in SFM &quot;Upate WO Primary FSR&quot;. Will be populated thanks to a SFM formula and retrieve the value from &quot;PFSRCanCreateTimeForOther&quot; field on the work order</description>
        <label>Tech_FSR Update Authorized for PFSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_IPName__c</fullName>
        <formula>SVMXC__Serial_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_IPName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_OrginalWDNumber__c</fullName>
        <description>This field stores the Original WD Number during Split WO.</description>
        <label>Tech_OrginalWDNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_PFSR_WO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech_PFSR_WO</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Work Details (Tech_PFSR_WO)</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_PartsOrderLine__c</fullName>
        <formula>CASESAFEID(PartsOrderLine__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_PartsOrderLine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Qty_5__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores Installed + unused  qty. The field is used in ServiceMax SFM Formulas</description>
        <label>Tech Qty 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Qty_6__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Installed + return unused</description>
        <label>Tech Qty 6</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_WDId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_WDId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_WDOriginal__c</fullName>
        <description>During Split, this field will store Original WD bFO Id</description>
        <label>Tech_WDOriginal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_WD_BatchIP_Ref__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field to execute Batch which gets updated by process builder(PB_WF_WD_Tech_Field_Update_BatchIP)</description>
        <label>Tech WD BatchIP Ref</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>FSR Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Europe/London</fullName>
                </value>
                <value>
                    <fullName>Europe/Dublin</fullName>
                </value>
                <value>
                    <fullName>Europe/Lisbon</fullName>
                </value>
                <value>
                    <fullName>Europe/Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Europe/Berlin</fullName>
                </value>
                <value>
                    <fullName>Europe/Brussels</fullName>
                </value>
                <value>
                    <fullName>Europe/Paris</fullName>
                </value>
                <value>
                    <fullName>Europe/Prague</fullName>
                </value>
                <value>
                    <fullName>Europe/Rome</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuwait</fullName>
                </value>
                <value>
                    <fullName>Asia/Riyadh</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Europe/Athens</fullName>
                </value>
                <value>
                    <fullName>Europe/Bucharest</fullName>
                </value>
                <value>
                    <fullName>Europe/Helsinki</fullName>
                </value>
                <value>
                    <fullName>Europe/Istanbul</fullName>
                </value>
                <value>
                    <fullName>Europe/Minsk</fullName>
                </value>
                <value>
                    <fullName>Asia/Jerusalem</fullName>
                </value>
                <value>
                    <fullName>Asia/Dubai</fullName>
                </value>
                <value>
                    <fullName>Europe/Moscow</fullName>
                </value>
                <value>
                    <fullName>Asia/Kabul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tehran</fullName>
                </value>
                <value>
                    <fullName>Asia/Karachi</fullName>
                </value>
                <value>
                    <fullName>Asia/Tashkent</fullName>
                </value>
                <value>
                    <fullName>Asia/Tbilisi</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalDuration__c</fullName>
        <label>Total Duration (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalExpense__c</fullName>
        <formula>ExpenseQuantity__c *  LinePricePerUnit__c</formula>
        <label>Total Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTime__c</fullName>
        <description>Total Time in hours</description>
        <formula>IF(TotalDuration__c&gt;0 , TotalDuration__c , (SVMXC__End_Date_and_Time__c - SVMXC__Start_Date_and_Time__c)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Total_Expense__c</fullName>
        <description>This field will display total expenses if the line type is expense other wise it will display the total time for the other three line types which are parts,travel and labour.</description>
        <formula>IF(  ISPICKVAL(SVMXC__Line_Type__c, &apos;Expenses&apos;), TEXT(TotalExpense__c), TEXT(TotalTime__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time / Total Expense</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>RMA Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_Shipment__c</fullName>
        <formula>PartsOrderLine__r.Tracking_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Tracking Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_and_Rest_Time__c</fullName>
        <description>BFOFS-2901 march &apos;19 used in SFM formula update wo sfm and lightning sfm</description>
        <label>Travel and Rest Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueWDId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueWDId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unplanned__c</fullName>
        <formula>IF(OR(AND( RecordTypeId  = $Label.CLJUL15SRV04, ISPICKVAL(SVMXC__Line_Type__c, &apos;Parts&apos;), ISBLANK(PartsOrderLine__c), ISBLANK( Parts_Order_Line_RMA__c)), RecordTypeId  = $Label.CLAPR15SRV60), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unplanned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unused_Qty__c</fullName>
        <label>Unused Qty</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WDBackOfficeReference__c</fullName>
        <description>Work Detail Back office reference number</description>
        <label>WDBackOfficeReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WD_Sync_Toggle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to use for toggle of WD Synchronization with Back Office when users click on Sync Failed Actuals Button on WD related list under WO.</description>
        <label>WD Sync Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOCompletedfromSFM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once the WO is completed via SFM CompleteWO, this flag will be set to True. THis flag is set to true in WO Complete WO SFM.</description>
        <label>WOCompletedfromSFM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOStatus__c</fullName>
        <formula>TEXT(SVMXC__Service_Order__r.SVMXC__Order_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WOStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_BackOfficeReference__c</fullName>
        <formula>SVMXC__Service_Order__r.BackOfficeReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO BackOfficeReference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Main_IP__c</fullName>
        <formula>IF( ISBLANK(SVMXC__Service_Order__r.SVMXC__Component__c), &apos;&apos;,  SVMXC__Service_Order__r.SVMXC__Component__r.Name )</formula>
        <label>WO Main IP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Main_Installed_Product__c</fullName>
        <description>This field is used in SFM Validation. (Split WO)</description>
        <formula>SVMXC__Service_Order__r.Tech_OriginalMIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Main Installed Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Name__c</fullName>
        <formula>SVMXC__Service_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Project__c</fullName>
        <formula>SVMXC__Service_Order__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <formula>IF( ISBLANK( SVMXC__Serial_Number__c ), &quot;&quot;, IF( TODAY() &lt;= SVMXC__Serial_Number__r.SVMXC__Warranty_End_Date__c, IMAGE(&quot;/resource/1374157744000/WarrantyCoverageLogo&quot;, &quot;Yes&quot;), IMAGE(&quot;/resource/1374157947000/NoLogo&quot;, &quot;No&quot;)))</formula>
        <label>Warranty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Detail_Age__c</fullName>
        <formula>(NOW()-CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Detail Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Detail_Type__c</fullName>
        <description>BR-11501: FSR&apos;s to be able to see the serials of the main installed products that are listed under work details.</description>
        <formula>IF(OR(RecordType.Name = &apos;Usage/Consumption&apos;, RecordType.Name = &apos;Estimate&apos;,RecordType.Name = &apos;Admin Usage/Consumption&apos;), &apos;Actual &apos;+If(ISPICKVAL(SVMXC__Line_Type__c, &apos;Labor&apos;), &apos;Time&apos;, TEXT(SVMXC__Line_Type__c))+&apos; &apos;+IF(ISPICKVAL(SVMXC__Line_Type__c, &apos;Expenses&apos;), TEXT(SVMXC__Expense_Type__c), TEXT(SVMXC__Activity_Type__c)), IF(RecordType.Name = &apos;Products Serviced&apos;, RecordType.Name, IF(RecordType.Name = &apos;Parts&apos;, TEXT(SVMXC__Line_Type__c)+&apos; &apos;+Part_Order_Line_Type__c, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Detail Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type_SubType__c</fullName>
        <formula>SVMXC__Service_Order__r.WorkOrder_Type_SubType__c</formula>
        <label>Work Order Type/SubType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMIP__c</fullName>
        <formula>IF( SVMXC__Serial_Number__c = SVMXC__Service_Order__r.SVMXC__Component__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRMACreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRMACreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>serialNumberCalculated__c</fullName>
        <formula>IF(ISBLANK(SVMXC__Serial_Number__r.SVMXC__Serial_Lot_Number__c), Shipped_Serial_Number__c, SVMXC__Serial_Number__r.SVMXC__Serial_Lot_Number__c)</formula>
        <label>Serial Nb</label>
        <type>Text</type>
    </fields>
    <label>Work Detail</label>
    <nameField>
        <displayFormat>WL-{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Details</pluralLabel>
    <recordTypes>
        <fullName>Admin_Usage_Consumption</fullName>
        <active>true</active>
        <description>To Be used for Admin Usage/Consumption</description>
        <label>Admin Usage/Consumption</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expense</fullName>
        <active>true</active>
        <label>Expense</label>
    </recordTypes>
    <recordTypes>
        <fullName>Labor</fullName>
        <active>true</active>
        <label>Labor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parts</fullName>
        <active>true</active>
        <label>Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Estimate</fullName>
        <active>true</active>
        <description>Estimate of work to be performed</description>
        <label>Estimate</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Products_Serviced</fullName>
        <active>true</active>
        <description>Products Serviced</description>
        <label>Products Serviced</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__RequestReceipt</fullName>
        <active>true</active>
        <description>Part requests and receipt information</description>
        <label>Request/Receipt</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__UsageConsumption</fullName>
        <active>true</active>
        <description>Details of actual work peformed on the service order</description>
        <label>Usage/Consumption</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_WD_MAR2019_PreventFSR_TEXCannotChange</fullName>
        <active>true</active>
        <description>Validation rule to prevent FSR to change the Return reason from &quot;TEX&quot;,
May2019:</description>
        <errorConditionFormula>AND(
NOT($User.BypassVR__c),
NOT($Profile.Id = $Label.CLFEB14SRV02),
ISPICKVAL(PRIORVALUE(Return_Reason__c),&apos;TEX&apos;),
NOT ((ISPICKVAL( Return_Reason__c , &apos;TEX&apos;))
)
)</errorConditionFormula>
        <errorMessage>You cannot change the return reason from &quot;TEX&quot;</errorMessage>
    </validationRules>
</CustomObject>